--- a/Traveldiary/app/src/main/res/values/colors.xml
+++ b/Traveldiary/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorMyBlue">#1296db</color>
+    <color name="colorMyGray">#707070</color>
 </resources>
