--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_gravity="center_horizontal"
     android:background="#ffffff"
-    tools:context=".Login">
+    tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
