--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -20,9 +20,9 @@
             android:id="@+id/edtUsername"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:paddingTop="8dp"
+            android:paddingTop="12dp"
             android:hint="请输入账号"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:textAlignment="center"
             android:background="@null"/>
     </LinearLayout>
@@ -36,11 +36,11 @@
 
         <EditText
             android:id="@+id/edtPassword"
-            android:paddingTop="8dp"
+            android:paddingTop="12dp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="请输入密码"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:textAlignment="center"
             android:background="@null"/>
     </LinearLayout>
@@ -69,9 +69,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:background="#ffffff">
 
         <Button
+            android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="注册账号"
@@ -80,8 +82,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="|"/>
+            android:text="|"
+            android:background="#ffffff"/>
         <Button
+            android:id="@+id/btnForgetPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="忘记密码"
