--- a/Traveldiary/app/src/main/res/values/colors.xml
+++ b/Traveldiary/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ffffff</color>
     <color name="colorMyBlue">#1296db</color>
     <color name="colorMyGray">#707070</color>
+    <color name="titleText">#000000</color>
 </resources>
