--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -4,62 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_gravity="center_horizontal"
     android:background="#ffffff"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="@drawable/editstyle"
-        android:layout_marginTop="80dp">
+        android:layout_marginTop="110dp"
+        android:background="@drawable/editstyle">
 
         <EditText
             android:id="@+id/edtUsername"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp"
+            android:background="@null"
+            android:cursorVisible="true"
             android:hint="请输入账号"
-            android:textSize="20dp"
+            android:paddingTop="12dp"
+            android:textColorHint="@color/editTextCorlor"
             android:textAlignment="center"
-            android:background="@null"/>
+            android:textSize="20dp"
+            android:inputType="textEmailAddress"
+            android:textCursorDrawable="@color/cursorCorlor"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:background="@drawable/editstyle"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="40dp"
+        android:background="@drawable/editstyle">
 
         <EditText
             android:id="@+id/edtPassword"
-            android:paddingTop="12dp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:background="@null"
+            android:cursorVisible="true"
             android:hint="请输入密码"
-            android:textSize="20dp"
+            android:textColorHint="@color/editTextCorlor"
+            android:paddingTop="12dp"
             android:textAlignment="center"
-            android:background="@null"/>
+            android:textSize="20dp"
+            android:inputType="textPassword"
+            android:textCursorDrawable="@color/cursorCorlor"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="50dp"
+        android:layout_weight="5">
 
         <LinearLayout
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/loginstyle">
 
             <ImageView
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:paddingLeft="7dp"
                 android:src="@drawable/jiantou" />
 
         </LinearLayout>
@@ -68,27 +79,36 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:background="#ffffff">
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="注册账号"
-            android:background="#ffffff" />
+            android:background="@color/colorPrimary"
+            android:text="注册账号" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="|"
-            android:background="#ffffff"/>
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="16dp"
+                android:layout_gravity="center"
+                android:background="#bcbcbc">
+
+            </View>
+        </LinearLayout>d
+
         <Button
             android:id="@+id/btnForgetPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="忘记密码"
-            android:background="#ffffff"/>
+            android:background="@color/colorPrimary"
+            android:text="忘记密码" />
     </LinearLayout>
 </LinearLayout>
