--- a/Traveldiary/app/src/main/res/values/colors.xml
+++ b/Traveldiary/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="colorMyBlue">#1296db</color>
     <color name="colorMyGray">#707070</color>
     <color name="titleText">#000000</color>
+    <color name="editBac">#F5F5F5</color>
+    <color name="registerBtnFrontCorlor">#ADD8E6</color>
+    <color name="registerBtnForCorlor">#1E90FF</color>
+    <color name="editTextCorlor">#D3D3D3</color>
+    <color name="cursorCorlor">#1E90FF</color>
 </resources>
