--- a/Traveldiary/app/src/main/res/values/registerstyles.xml
+++ b/Traveldiary/app/src/main/res/values/registerstyles.xml
@@ -6,5 +6,6 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:textColorPrimary">@color/titleText</item>
+        <item name="windowNoTitle">true</item>
     </style>
 </resources>
