--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -10,20 +10,21 @@
     tools:context=".LoginActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginTop="110dp"
-        android:background="@drawable/editstyle">
+        android:background="@drawable/editstyle"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
         <EditText
             android:id="@+id/edtUsername"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@null"
             android:cursorVisible="true"
             android:hint="请输入账号"
-            android:paddingTop="12dp"
             android:textColorHint="@color/editTextCorlor"
             android:textAlignment="center"
             android:textSize="20dp"
@@ -32,25 +33,25 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_gravity="center"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="40dp"
+        android:layout_marginRight="50dp"
         android:background="@drawable/editstyle">
 
         <EditText
             android:id="@+id/edtPassword"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@null"
             android:cursorVisible="true"
             android:hint="请输入密码"
-            android:textColorHint="@color/editTextCorlor"
-            android:paddingTop="12dp"
-            android:textAlignment="center"
-            android:textSize="20dp"
             android:inputType="textPassword"
-            android:textCursorDrawable="@color/cursorCorlor"/>
+            android:textAlignment="center"
+            android:textColorHint="@color/editTextCorlor"
+            android:textCursorDrawable="@color/cursorCorlor"
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -81,13 +82,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
-        <Button
+        <TextView
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
+            android:layout_gravity="center"
             android:text="注册账号" />
 
         <LinearLayout
@@ -95,20 +98,20 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimary">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="16dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="#bcbcbc">
+                android:text="  |  " />
 
-            </View>
-        </LinearLayout>d
+        </LinearLayout>
 
-        <Button
+        <TextView
             android:id="@+id/btnForgetPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            android:text="忘记密码" />
+            android:text="忘记密码"
+            android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
