--- a/Traveldiary/app/src/main/res/layout/activity_register.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_register.xml
@@ -17,54 +17,57 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="账号注册"
-            android:textSize="20dp"
+            android:textSize="25dp"
             android:textColor="@color/titleText"/>
     </LinearLayout>
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/editstyle"
-        android:orientation="horizontal"
-        android:layout_marginTop="50dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/editstyle">
 
         <LinearLayout
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <EditText
                 android:id="@+id/edtEmailaddress"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginLeft="30dp"
                 android:background="@null"
+                android:cursorVisible="true"
                 android:hint="请输入邮箱"
                 android:inputType="textEmailAddress"
+                android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
-                android:textSize="18dp"
-                android:cursorVisible="true"/>
+                android:textSize="18dp" />
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/editstyle"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
         <EditText
             android:id="@+id/edtPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="45dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@null"
             android:cursorVisible="true"
+            android:textAlignment="center"
             android:hint="请输入密码"
             android:inputType="textPassword"
             android:textColorHint="@color/editTextCorlor"
@@ -73,19 +76,20 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/editstyle"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
         <EditText
             android:id="@+id/edtAgainPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="45dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@null"
+            android:textAlignment="center"
             android:cursorVisible="true"
             android:hint="请再次输入密码"
             android:inputType="textPassword"
@@ -95,41 +99,46 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
         android:orientation="horizontal"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/editstyle">
 
         <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="@drawable/editstyle"
-            android:orientation="horizontal">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="5">
 
             <EditText
                 android:id="@+id/edtVerifyCode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="45dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:background="@null"
                 android:hint="请输入验证码"
+                android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
-                android:textSize="18dp"
                 android:cursorVisible="true"
-                android:inputType="number"/>
+                android:textSize="18dp"
+                android:inputType="number" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center">
 
             <TextView
                 android:id="@+id/edtGetVerifyCode"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="65dp"
-                android:background="@color/editBac"
-                android:paddingTop="6dp"
-                android:baselineAligned="false"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
                 android:text="获取验证码"
                 android:textColor="#1E90FF"
                 />
