--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
     android:layout_gravity="center_horizontal"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:id="@+id/activity_login">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="  |  " />
+                android:text="      |      " />
 
         </LinearLayout>
 
