--- a/Traveldiary/app/src/main/res/layout/activity_register.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_register.xml
@@ -109,16 +109,16 @@
         android:background="@drawable/editstyle">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5">
+            android:layout_weight="3">
 
             <EditText
                 android:id="@+id/edtVerifyCode"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@null"
                 android:hint="请输入验证码"
+                android:background="@null"
                 android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
@@ -129,9 +129,9 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="8"
             android:layout_gravity="center">
 
             <TextView
