--- a/Traveldiary/app/src/main/res/layout/activity_forget_pass.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_forget_pass.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".ForgetPassActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="账号注册"
+            android:text="通过邮箱找回密码"
             android:textSize="25dp"
             android:textColor="@color/titleText"/>
     </LinearLayout>
@@ -50,64 +50,18 @@
                 android:textCursorDrawable="@color/cursorCorlor"
                 android:textSize="18dp" />
         </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/editstyle"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp">
-
-        <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:cursorVisible="true"
-            android:textAlignment="center"
-            android:hint="请输入密码"
-            android:inputType="textPassword"
-            android:textColorHint="@color/editTextCorlor"
-            android:textCursorDrawable="@color/cursorCorlor"
-            android:textSize="18dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/editstyle"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp">
-
-        <EditText
-            android:id="@+id/edtAgainPass"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:textAlignment="center"
-            android:cursorVisible="true"
-            android:hint="请再次输入密码"
-            android:inputType="textPassword"
-            android:textColorHint="@color/editTextCorlor"
-            android:textCursorDrawable="@color/cursorCorlor"
-            android:textSize="18dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/editstyle">
+        android:background="@drawable/editstyle"
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -118,33 +72,31 @@
                 android:id="@+id/edtVerifyCode"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="请输入验证码"
                 android:background="@null"
+                android:cursorVisible="true"
+                android:hint="请输入验证码"
+                android:inputType="number"
                 android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
-                android:cursorVisible="true"
-                android:textSize="18dp"
-                android:inputType="number" />
+                android:textSize="18dp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="8"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_weight="8">
 
             <TextView
                 android:id="@+id/edtGetVerifyCode"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textAlignment="center"
                 android:text="获取验证码"
-                android:textColor="#1E90FF"
-                />
+                android:textAlignment="center"
+                android:textColor="#1E90FF" />
         </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
@@ -161,38 +113,5 @@
             android:text="下一步"
             android:textColor="@color/colorPrimary"
             android:background="@drawable/registerstyle"/>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注册即代表阅读并同意"
-            android:textColor="@color/titleText" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="服务协议"
-            android:textColor="#0000FF" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="和"
-            android:textColor="@color/titleText" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="隐私政策"
-            android:textColor="#0000FF" />
     </LinearLayout>
 </LinearLayout>
