--- a/Traveldiary/app/src/main/res/layout/activity_main.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,9 @@
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_alignParentBottom="true"></TabWidget>
+            android:layout_alignParentBottom="true"
+            android:background="#66DCDCDC"></TabWidget>
+
         <FrameLayout
             android:id="@android:id/tabcontent"
             android:layout_width="match_parent"
