添加找回密码页面

--- a/Traveldiary/app/src/main/res/layout/activity_reset_pass.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_reset_pass.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:orientation="vertical"
-    tools:context=".ForgetPassActivity">
+    tools:context=".ResetPassActivity"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="通过邮箱找回密码"
+            android:text="找回密码"
             android:textSize="25dp"
             android:textColor="@color/titleText"/>
     </LinearLayout>
@@ -38,12 +37,12 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/edtEmailaddress"
+                android:id="@+id/edtNewPass"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
                 android:cursorVisible="true"
-                android:hint="请输入邮箱"
+                android:hint="请输入新密码"
                 android:inputType="textEmailAddress"
                 android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
@@ -54,48 +53,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/editstyle"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
+        android:background="@drawable/editstyle">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3">
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <EditText
-                android:id="@+id/edtVerifyCode"
+                android:id="@+id/edtAgainNewPass"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
                 android:cursorVisible="true"
-                android:hint="请输入验证码"
-                android:inputType="number"
+                android:hint="请确认新密码"
+                android:inputType="textEmailAddress"
                 android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
                 android:textSize="18dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="8">
-
-            <TextView
-                android:id="@+id/textGetVerifyCode"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="获取验证码"
-                android:textAlignment="center"
-                android:textColor="#1E90FF" />
         </LinearLayout>
     </LinearLayout>
 
@@ -110,8 +92,9 @@
             android:id="@+id/btnNext"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="下一步"
+            android:text="去登陆"
             android:textColor="@color/colorPrimary"
             android:background="@drawable/registerstyle"/>
     </LinearLayout>
+
 </LinearLayout>
