--- a/Traveldiary/app/src/main/res/layout/activity_forget_pass.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_forget_pass.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".ForgetPassActivity">
+    tools:context=".Login.ForgetPassActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
