--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center_horizontal"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".LoginActivity"
+    tools:context=".Login.LoginActivity"
     android:id="@+id/activity_login">
 
     <LinearLayout
