完成设置页面

--- a/Traveldiary/app/src/main/res/layout/message_layout.xml
+++ b/Traveldiary/app/src/main/res/layout/message_layout.xml
@@ -93,7 +93,7 @@
 
     <!--设置按钮-->
     <Button
-        android:id="@+id/btnSetting"
+        android:id="@+id/settingBtn"
         android:layout_marginTop="30dp"
         android:background="@drawable/settingbtn"
         android:layout_width="370dp"
