--- a/Traveldiary/app/src/main/res/layout/findings_layout.xml
+++ b/Traveldiary/app/src/main/res/layout/findings_layout.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.amap.api.maps.TextureMapView
-        android:id="@+id/mapView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
-/>
+<FrameLayout android:layout_height="match_parent"
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent">
+    <com.amap.api.maps.TextureMapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    <Button android:layout_width="60dp"
+            android:id="@+id/add"
+            android:background="@drawable/write"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="30dp"
+            android:layout_height="60dp"/>
+</FrameLayout>
