--- a/Traveldiary/app/src/main/res/layout/footprint_layout.xml
+++ b/Traveldiary/app/src/main/res/layout/footprint_layout.xml
@@ -2,5 +2,5 @@
 <com.amap.api.maps.TextureMapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
-/>
+        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"/>
+
