--- a/Traveldiary/app/src/main/res/layout/activity_message_tree.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_message_tree.xml
@@ -2,11 +2,12 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    android:orientation="vertical"
+    android:background="#F5F5F5"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <ListView
         android:id="@+id/list_item"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
 </LinearLayout>
