完成修改密码和昵称

--- a/Traveldiary/app/src/main/res/layout/activity_change_password.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_change_password.xml
@@ -4,74 +4,150 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Settings.ChangePassword"
+    tools:context=".Login.ResetPassActivity"
     android:orientation="vertical"
     android:background="#ededed">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp">
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/editstyle">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="旧密码"
-            android:textSize="18dp"
-            android:textColor="@color/titleText"/>
-
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/titleText"
-            android:backgroundTint="@color/registerBtnFrontCorlor"/>
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/oldPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:cursorVisible="true"
+                android:hint="请输入旧密码"
+                android:inputType="textPassword"
+                android:textAlignment="center"
+                android:textColorHint="@color/editTextCorlor"
+                android:textCursorDrawable="@color/cursorCorlor"
+                android:textSize="18dp" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp">
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/editstyle">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="新密码"
-            android:textSize="18dp"
-            android:textColor="@color/titleText"/>
-
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/titleText"
-            android:backgroundTint="@color/registerBtnFrontCorlor"/>
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/newPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:cursorVisible="true"
+                android:hint="请输入新密码"
+                android:inputType="textPassword"
+                android:textAlignment="center"
+                android:textColorHint="@color/editTextCorlor"
+                android:textCursorDrawable="@color/cursorCorlor"
+                android:textSize="18dp" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_height="20dp"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/passwordLength"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/editstyle">
+
+        <EditText
+            android:id="@+id/againNewPassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:cursorVisible="true"
+            android:hint="请确认新密码"
+            android:inputType="textPassword"
+            android:textAlignment="center"
+            android:textColorHint="@color/editTextCorlor"
+            android:textCursorDrawable="@color/cursorCorlor"
+            android:textSize="18dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/noSame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right">
         <TextView
             android:id="@+id/textForgetPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="忘记密码？" />
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:text="忘记密码？"
+            android:textColor="@color/titleText" />
 
     </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:text="保存"
-        android:background="@drawable/registerforstyle"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_weight="5"
+        android:layout_marginTop="25dp">
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:text="保存"
+            android:textColor="@color/colorPrimary"
+            android:background="@drawable/registerstyle"/>
+    </LinearLayout>
+
 </LinearLayout>
